dist/media/Ingress.lidarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: media
spec:
  rules:
    - host: lidarr.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: lidarr
                port:
                  number: 8686
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - lidarr.cmdcentral.xyz
      secretName: media-tls
